syntax = "proto3";
package protobuf.login;

option go_package = "protobuf-v1/golang/login";

import "google/protobuf/timestamp.proto";

message LoginRequest {
  string email = 1;
  string password = 2;
}

message ValidateJWTRequest {
  string jwt = 1;
}

message ValidateJWTResponse {
  string user_id = 1;
  string team_id = 2;
}

message LoginResponse {
  string access_token = 1;
  string token_type = 2;
  string user_id = 3;
  google.protobuf.Timestamp token_validity = 4;
}

service LoginService {
  rpc Login(LoginRequest) returns (LoginResponse);
  rpc ValidateJWT(ValidateJWTRequest) returns (ValidateJWTResponse);
}